# epilepsy_tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: cometa.rst  conf.py  epidatavault.rst  examples.rst  hexoskin.rst  index.rst
epilepsy_tools/: __init__.py
epilepsy_tools/cometa/: _data.py
epilepsy_tools/hexoskin/: _data.py
src/epilepsy_tools/cometa/: __init__.py  _data.py  _plot.py  data.py  plot.py
src/epilepsy_tools/epidatavault/: __init__.py  extract_annotations.py  extract_patients.py  extract_seizures.py  log_loader.py  patient_log.py
src/epilepsy_tools/hexoskin/: __init__.py  _data.py  data.py
tests/: conftest.py  test_cometa.py  test_hexoskin.py
tests/cometa/: conftest.py  test_data.py  test_plot.py
tests/epidatavault/: test_extract_annotations.py  test_extract_patients.py  test_extract_seizures.py  test_log_loader.py
tests/hexoskin/: test_data.py
